[package]
name = "github_pull_request_summary"
version = "0.1.0"
authors = ["Tomohiko Himura <eiel.hal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-rs = "0.7"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"